examples/test/testpolicy18465.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18465
  namespace: namespace229
spec:
  podSelector:
    matchLabels:
      key10: value49
      key2: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value1
          key9: value9
      podSelector:
        matchLabels:
          key36: value16
          key7: value7
          key20: value2
